syntax = "proto3";

package user;

// 服务的定义
service Greeter {
  // Sends a greeting
  rpc Login (LoginRequest) returns (UserReply) {}
  rpc Register (RegisterRequest) returns (UserReply) {}
  rpc verify (VerifyRequest) returns (UserReply) {}
}

// 服务的请求参数
message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string checkPassword = 3;
  string role = 4;
}

message VerifyRequest {
  string code = 1;
}



// 服务的响应参数
message Data {
  string userId = 1;
  string username = 2;
  string role = 3;
  string authorization = 5;
}

message UserReply {
  bool success = 1;
  string message = 2;
  Data data = 3;
}